@@ -1,3 +1,5 @@
+1/6/14 change title in graph's bar when units are changed
+1/6/14 delete the rightTitle option from ExpandCollapseBar, add setTitle function
 1/6/14 show zoom buttons only for Linear scale
 1/6/14 wire up log graph to display quantity (moles)
 1/6/14 add minor tick marks to graph, add options
